// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WoW Characters Character render with correct data 1`] = `
<div
  className="sc-giYglK kgtxhA"
>
  <div
    className="sc-iqseJM hcnwtv"
  >
    <img
      src="https://render.worldofwarcraft.com/us/character/barthilas/69/1-main.jpg"
    />
  </div>
  <div
    className="sc-ezbkAF iugekb"
  >
    <h3 />
    <h4>
      Realm: 
    </h4>
    <p>
      Level: 
    </p>
    <p>
      Class: 
    </p>
    <p>
      Race: 
    </p>
    <p>
      Gender: 
    </p>
    <p>
      Faction: 
    </p>
  </div>
</div>
`;

exports[`WoW Characters CharacterImage render with correct data 1`] = `
<div
  className="sc-bYoBSM lbqQMy"
>
  <img
    src="https://render.worldofwarcraft.com/us/character/barthilas/69/1-main.jpg"
  />
</div>
`;

exports[`WoW Characters Characters render with correct data 1`] = `
<div
  className="sc-bqiRlB eXFHqo"
>
  <div
    className="sc-crHmcD cGlLJg"
  >
    <div
      className="sc-iqseJM hcnwtv"
    >
      <img
        src="https://render.worldofwarcraft.com/us/character/barthilas/69/1-main.jpg"
      />
    </div>
    <div
      className="sc-egiyK iLOulL"
    >
      <h3>
        Character-1
      </h3>
      <h4>
        Realm: 
        Character-1
      </h4>
      <p>
        Level: 
        1
      </p>
      <p>
        Class: 
        Rat Knight
      </p>
      <p>
        Race: 
        Rat
      </p>
      <p>
        Gender: 
        Female
      </p>
      <p>
        Faction: 
        Alliance
      </p>
    </div>
  </div>
  <div
    className="sc-crHmcD cGlLJg"
  >
    <div
      className="sc-iqseJM hcnwtv"
    >
      <img
        src="https://render.worldofwarcraft.com/us/character/barthilas/69/1-main.jpg"
      />
    </div>
    <div
      className="sc-egiyK iLOulL"
    >
      <h3>
        Bigdawg
      </h3>
      <h4>
        Realm: 
        Bigdawg
      </h4>
      <p>
        Level: 
        2
      </p>
      <p>
        Class: 
        Monk
      </p>
      <p>
        Race: 
        Pandaren
      </p>
      <p>
        Gender: 
        Male
      </p>
      <p>
        Faction: 
        Alliance
      </p>
    </div>
  </div>
</div>
`;

exports[`WoW Characters Image render with correct data 1`] = `
<img
  src="https://render.worldofwarcraft.com/us/character/barthilas/69/1-main.jpg"
/>
`;
